AMT-24: Fixed hamburger bar and logged in as spacing.

--- a/style/custom.css
+++ b/style/custom.css
@@ -3100,7 +3100,7 @@ body.altitude-settings-fixedquizui .sb-slide.transform-override {
 }
 
 #hamburger span.icon-bar:nth-child(1) {
-    top: 11.5px;
+    top: 10.5px;
 }
 
 #hamburger span.icon-bar:nth-child(2),
@@ -3193,7 +3193,7 @@ body.altitude-settings-fixedquizui .sb-slide.transform-override {
 }
 
 .sb-toggle-right #hamburger span.icon-bar:nth-child(1) {
-    top: 2.5px;
+    top: 3px;
 }
 
 .sb-toggle-right #hamburger span.icon-bar:nth-child(2),
@@ -3268,6 +3268,15 @@ body.altitude-settings-fixedquizui .sb-slide.transform-override {
     overflow: hidden;
     clip: rect(1px,1px,1px,1px);
     position: absolute!important;
+}
+
+/* Fix padding for 2.7 "logged in as" text. left side only. */
+.sb-toggle-left ~ .usermenu .logininfo {
+    padding-top: .3em;
+}
+
+#side-panel-button .sb-toggle-left {
+    margin-left: .2em;
 }
 
 /* Make ELIS icon styles inherit color.*/
